hphp/hack/test/analyze/list_logger/logs/intersection_basic.php
<?hh

function test_intersection<T>(T $x): void {
  if ($x is Container<_>) {
    list($a, $b) = $x;
  }
}
